[package]
name = "advent-of-code-2017-runner"
version = "0.1.0"
authors = ["timvisee <timvisee@gmail.com>"]

[dependencies]
clap = "2.29"

day01 = { path = "day01" }
day02 = { path = "day02" }
day03 = { path = "day03" }
day04 = { path = "day04" }
day05 = { path = "day05" }
day11 = { path = "day11" }
day12 = { path = "day12" }
day13 = { path = "day13" }
